test/unitRedefinition.slq

def main(){
	x:=();
	y:=x;
	x:=3; // error
	return x;
}
